--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -4,4 +4,5 @@ Server:
     RedisServer: "127.0.0.1:7480"
     RedisPasswd: "e18ffb7484f4d69c2acb40008471a71c"
     OraConnString: "oracle://system:oracle@localhost:49161/xe"
+    MssqlConnString: "server=localhost;user id=sa;password=Mssql_2019;port=1433"
     SSLCertPath: "cert"
